Fixing height on mobile search

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,12 +8,12 @@
 }
 
 #mobile-menu {
-  height: 300px; 
+  height: 280px; 
 
 }
 
 #mobile-search {
-  margin-left: 250px;
+ /* margin-left: 250px;*/
 }
 
 #cart-div {
